[package]
name = "mdanceio"
version = "0.1.0"
authors = ["NAiveD <nice-die@live.com>"]
edition = "2021"
description = "MDanceIO is a MMD(MikuMikuDance) compatible implementation targeting at browser through wasm. "
repository = "https://github.com/ReaNAiveD/mdanceio"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[[test]]
name = "mdanceio-tests"
path = "tests/root.rs"

[[example]]
name = "winit_app"

[dependencies]
wgpu = { version = "0.14.0", features = ["trace"] }
log = "0.4"
bytemuck = { version = "1.12.1", features = ["derive"] }
cgmath = "0.18.0"
rapier3d = { version = "0.15.0", features = ["simd-stable"] }
nalgebra = { version = "0.31.1" }
instant = { version = "0.1.12", features = ["wasm-bindgen"] }

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg", "tga", "bmp"]

[dependencies.nanoem]
path = "../nanoem"
version = "0.1.0"

[dev-dependencies]
tokio = { version = "1.21.2", features = ["full"] }
winit = "0.27.3"
clap = "4.0.10"
png = "0.17.6"
# env_logger = "0.9.0"
log4rs = "1.1.1"
chrono = "0.4.22"

[target.'cfg(target_os = "android")'.dependencies]
glow = "0.11.2"
wgpu-hal = "0.14.0"
uniffi = "0.20.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
web-sys = { version = "0.3.60", features = [
    "Document",
    "Navigator",
    "Node",
    "NodeList",
    "Gpu",
    "GpuAdapter",
    "GpuAddressMode",
    "GpuAutoLayoutMode",
    "GpuBindGroup",
    "GpuBindGroupDescriptor",
    "GpuBindGroupEntry",
    "GpuBindGroupLayout",
    "GpuBindGroupLayoutDescriptor",
    "GpuBindGroupLayoutEntry",
    "GpuBlendComponent",
    "GpuBlendFactor",
    "GpuBlendOperation",
    "GpuBlendState",
    "GpuBuffer",
    "GpuBufferBinding",
    "GpuBufferBindingLayout",
    "GpuBufferBindingType",
    "GpuBufferDescriptor",
    "GpuCanvasContext",
    "GpuCanvasConfiguration",
    "GpuColorDict",
    "GpuColorTargetState",
    "GpuCommandBuffer",
    "GpuCommandBufferDescriptor",
    "GpuCommandEncoder",
    "GpuCommandEncoderDescriptor",
    "GpuCompareFunction",
    "GpuCompilationInfo",
    "GpuCompilationMessage",
    "GpuCompilationMessageType",
    "GpuComputePassDescriptor",
    "GpuComputePassEncoder",
    "GpuComputePipeline",
    "GpuComputePipelineDescriptor",
    "GpuCullMode",
    "GpuDepthStencilState",
    "GpuDevice",
    "GpuDeviceDescriptor",
    "GpuDeviceLostInfo",
    "GpuDeviceLostReason",
    "GpuError",
    "GpuErrorFilter",
    "GpuExtent3dDict",
    "GpuFeatureName",
    "GpuFilterMode",
    "GpuFragmentState",
    "GpuFrontFace",
    "GpuImageCopyBuffer",
    "GpuImageCopyTexture",
    "GpuImageDataLayout",
    "GpuIndexFormat",
    "GpuLoadOp",
    "gpu_map_mode",
    "GpuMipmapFilterMode",
    "GpuMultisampleState",
    "GpuObjectDescriptorBase",
    "GpuOrigin2dDict",
    "GpuOrigin3dDict",
    "GpuOutOfMemoryError",
    "GpuPipelineDescriptorBase",
    "GpuPipelineLayout",
    "GpuPipelineLayoutDescriptor",
    "GpuPowerPreference",
    "GpuPrimitiveState",
    "GpuPrimitiveTopology",
    "GpuProgrammableStage",
    "GpuQuerySet",
    "GpuQuerySetDescriptor",
    "GpuQueryType",
    "GpuQueue",
    "GpuRenderBundle",
    "GpuRenderBundleDescriptor",
    "GpuRenderBundleEncoder",
    "GpuRenderBundleEncoderDescriptor",
    "GpuRenderPassColorAttachment",
    "GpuRenderPassDepthStencilAttachment",
    "GpuRenderPassDescriptor",
    "GpuRenderPassEncoder",
    "GpuRenderPipeline",
    "GpuRenderPipelineDescriptor",
    "GpuRequestAdapterOptions",
    "GpuSampler",
    "GpuSamplerBindingLayout",
    "GpuSamplerBindingType",
    "GpuSamplerDescriptor",
    "GpuShaderModule",
    "GpuShaderModuleDescriptor",
    "GpuStencilFaceState",
    "GpuStencilOperation",
    "GpuStorageTextureAccess",
    "GpuStorageTextureBindingLayout",
    "GpuStoreOp",
    "GpuSupportedFeatures",
    "GpuSupportedLimits",
    "GpuTexture",
    "GpuTextureAspect",
    "GpuTextureBindingLayout",
    "GpuTextureDescriptor",
    "GpuTextureDimension",
    "GpuTextureFormat",
    "GpuTextureSampleType",
    "GpuTextureView",
    "GpuTextureViewDescriptor",
    "GpuTextureViewDimension",
    "GpuUncapturedErrorEvent",
    "GpuUncapturedErrorEventInit",
    "GpuValidationError",
    "GpuVertexAttribute",
    "GpuVertexBufferLayout",
    "GpuVertexFormat",
    "GpuVertexState",
    "GpuVertexStepMode",
    "HtmlCanvasElement",
    "OffscreenCanvas",
    "ImageBitmap",
    "ImageBitmapRenderingContext",
    "Window",
] }
js-sys = { version = "0.3.60" }
console_error_panic_hook = "0.1.7"
console_log = { version = "0.2.0", features = ["color"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
# We need the Location feature in the framework examples
web-sys = { version = "0.3.60", features = ["Location"] }

[target.'cfg(target_os = "android")'.build-dependencies]
uniffi_build = "0.20.0"
