[package]
name = "mdanceio"
version = "0.1.2"
authors = ["NAiveD <nice-die@live.com>"]
edition = "2021"
description = "MDanceIO is a MMD(MikuMikuDance) compatible implementation targeting at browser through wasm. "
repository = "https://github.com/ReaNAiveD/mdanceio"
license = "MIT"

[[test]]
name = "mdanceio-tests"
path = "tests/root.rs"

[[example]]
name = "winit_app"

[features]
webgl = ["wgpu/webgl"]
wasm-bindgen = ["instant/wasm-bindgen"]

[dependencies]
wgpu = { version = "0.16.0", features = ["trace"] }
log = "0.4"
bytemuck = { version = "1.13.1", features = ["derive"] }
cgmath = "0.18.0"
rapier3d = { version = "0.17.2", features = ["simd-stable", "debug-render"] }
nalgebra = { version = "0.32.2" }
instant = { version = "0.1.12" }

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg", "tga", "bmp"]

[dependencies.nanoem]
path = "../nanoem"
version = "0.1.2"

[dev-dependencies]
tokio = { version = "1.21.2", features = ["full"] }
winit = "0.28.3"
clap = "4.0.10"
png = "0.17.6"
log4rs = "1.1.1"
